@@ -127,15 +127,16 @@ function get_agent_alerts ($id_agent, $filter = false, $options = false) {
 /**
  * Copy the agents config from one agent to the other
  *
- * @param int $source_id_agent Agent id
- * @param mixed $destiny_id_agents Agent id or id's (array) to copy to
- * @param bool $modules Whether to copy modules as well (defaults to get_parameter ('copy_modules'))
- * @param bool $alerts Whether to copy alerts as well
- * @param array $target_modules Which modules to copy
+ * @param int Agent id
+ * @param mixed Agent id or id's (array) to copy to
+ * @param bool Whether to copy modules as well (defaults to $_REQUEST['copy_modules'])
+ * @param bool Whether to copy alerts as well
+ * @param array Which modules to copy.
+ * @param array Which alerts to copy. Only will be used if target_modules is empty.
  *
  * @return bool True in case of good, false in case of bad
  */
-function process_manage_config ($source_id_agent, $destiny_id_agents, $copy_modules = false, $copy_alerts = false, $target_modules = false) {
+function process_manage_config ($source_id_agent, $destiny_id_agents, $copy_modules = false, $copy_alerts = false, $target_modules = false, $target_alerts = false) {
 	if (empty ($source_id_agent)) {
 		echo '<h3 class="error">'.__('No source agent to copy').'</h3>';
 		return false;
@@ -149,46 +150,68 @@ function process_manage_config ($source_id_agent, $destiny_id_agents, $copy_modu
 	if ($copy_modules == false) {
 		$copy_modules = (bool) get_parameter ('copy_modules', $copy_modules);
 	}
+	
 	if ($copy_alerts == false) {
 		$copy_alerts = (bool) get_parameter ('copy_alerts', $copy_alerts);
 	}
 	
-	if ($copy_modules) {
-		if (empty ($target_modules)) {
-			$target_modules = (array) get_parameter ('target_modules', $target_modules);
-		}
-		
-		if (empty ($target_modules)) {
+	if (! $copy_modules && ! $copy_alerts)
+		return;
+	
+	if (empty ($target_modules)) {
+		$target_modules = (array) get_parameter ('target_modules', array ());
+	}
+	
+	if (empty ($target_alerts)) {
+		$target_alerts = (array) get_parameter ('target_alerts', array ());
+	}
+	
+	if (empty ($target_modules)) {
+		if (! $copy_alerts) {
 			echo '<h3 class="error">'.__('No modules have been selected').'</h3>';
 			return false;
 		}
+		$target_modules = array ();
 		
-		process_sql ('SET AUTOCOMMIT = 0');
-		process_sql ('START TRANSACTION');
-		$error = false;
-		$alerts = array ();
-		foreach ($destiny_id_agents as $id_destiny_agent) {
-			foreach ($target_modules as $id_agent_module) {
-				$result = copy_agent_module_to_agent ($id_agent_module,
-					$id_destiny_agent);
-				
-				if ($result === false) {
-					$error = true;
-					break;
-				}
-				
-				$id_destiny_module = $result;
-				if (! isset ($alerts[$id_agent_module]))
-					$alerts[$id_agent_module] = get_alerts_agent_module ($id_agent_module,
-						true);
-				
-				if ($alerts[$id_agent_module] === false)
-					continue;
-				
-				if (! $copy_alerts)
-					continue;
-				
-				foreach ($alerts[$id_agent_module] as $alert) {
+		foreach ($target_alerts as $id_alert) {
+			$alert = get_alert_agent_module ($id_alert);
+			if ($alert === false)
+				continue;
+			/* Check if some alerts which doesn't belong to the agent was given */
+			if (get_agentmodule_agent ($alert['id_agent_module']) != $source_id_agent)
+				continue;
+			array_push ($target_modules, $alert['id_agent_module']);
+		}
+	}
+	
+	process_sql ('SET AUTOCOMMIT = 0');
+	process_sql ('START TRANSACTION');
+	$error = false;
+	
+	foreach ($destiny_id_agents as $id_destiny_agent) {
+		foreach ($target_modules as $id_agent_module) {
+			$result = copy_agent_module_to_agent ($id_agent_module,
+				$id_destiny_agent);
+		
+			if ($result === false) {
+				$error = true;
+				break;
+			}
+			
+			$id_destiny_module = $result;
+			
+			if (! $copy_alerts)
+				continue;
+			
+			/* If the alerts were given, copy afterwards. Otherwise, all the
+			alerts for the module will be copied */
+			if (! empty ($target_alerts)) {
+				foreach ($target_alerts as $id_alert) {
+					$alert = get_alert_agent_module ($id_alert);
+					if ($alert === false)
+						continue;
+					if ($alert['id_agent_module'] != $id_agent_module)
+						continue;
 					$result = copy_alert_agent_module_to_agent_module ($alert['id'],
 						$id_destiny_module);
 					if ($result === false) {
@@ -196,20 +219,34 @@ function process_manage_config ($source_id_agent, $destiny_id_agents, $copy_modu
 						break;
 					}
 				}
+				continue;
 			}
-			if ($error)
-				break;
+			
+			$alerts = get_alerts_agent_module ($id_agent_module, true);
+			
+			if ($alerts === false)
+				continue;
+			
+			foreach ($alerts as $alert) {
+				$result = copy_alert_agent_module_to_agent_module ($alert['id'],
+					$id_destiny_module);
+				if ($result === false) {
+					$error = true;
+					break;
+				}
+			}
 		}
-		
-		if ($error) {
-			echo '<h3 class="error">'.__('There was an error copying the agent configuration, the copy has been cancelled').'</h3>';
-			process_sql ('ROLLBACK');
-		} else {
-			echo '<h3 class="suc">'.__('Successfully copied').'</h3>';
-			process_sql ('COMMIT');
-		}
-		process_sql ('SET AUTOCOMMIT = 1');
+		if ($error)
+			break;
 	}
-}
 	
+	if ($error) {
+		echo '<h3 class="error">'.__('There was an error copying the agent configuration, the copy has been cancelled').'</h3>';
+		process_sql ('ROLLBACK');
+	} else {
+		echo '<h3 class="suc">'.__('Successfully copied').'</h3>';
+		process_sql ('COMMIT');
+	}
+	process_sql ('SET AUTOCOMMIT = 1');
+}
 ?>
